# Async-Events

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
consumer/: main.py
consumer/core/: config.py  logging.py  metrics.py  templates.py
consumer/db/: engine.py
consumer/domain/: __init__.py  notifications.py
consumer/models/: __init__.py  events.py
consumer/services/: kafka_consumer.py  notification_service.py
consumer/use_cases/: process_order_event.py  protocols.py
docs/: AGENTS.md  ARCHITECTURE.md  REFERENCE_EXAMPLES.md  logic.md  plan.md
event_generator/: main.py
event_generator/core/: config.py  metrics.py
event_generator/domain/: event_payload.py  order_chain.py  order_pool.py
event_generator/jobs/: generator_job.py
event_generator/services/: health_checker.py  producer_client.py  rate_limited_event_loop.py  rate_limited_sender.py
event_generator/use_cases/: generate_events.py  protocols.py
monitoring/prometheus/: prometheus.yml
producer/: main.py
producer/core/: config.py  logging.py  metrics.py
producer/db/: engine.py
producer/domain/: events.py
producer/jobs/: republish_job.py
producer/models/: events.py
producer/services/: event_service.py  kafka_client.py  publish_after_response.py
producer/use_cases/: __init__.py  create_order_event.py  protocols.py  republish_unpublished_events.py
shared/: __init__.py
shared/db/: __init__.py
tests/: factories.py
tests/consumer/: conftest.py  factories.py
tests/producer/: conftest.py  factories.py
(+31 files in other folders)
